--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="{% url 'post_list' %}">My Tech Blog</a></li>
                 <li><a class="navbar-link" href="{% url 'about' %}">About</a></li>
-                <li><a class="navbar-link" href="https://github.com/UmarSyal" target="blank">Github</a></li>
+                <li><a class="navbar-link" href="https://github.com" target="blank">Github</a></li>
                 <li><a class="navbar-link" href="https://www.linkedin.com" target="blank">LinkedIn</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
